# bicimad

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml
data/processed/: stations_metadata.csv  stations_timeseries.csv  stations_timeseries_resampled.csv  stations_timeseries_resampled_with_exogenous.csv  test.csv  train.csv
data/raw/: calendario.csv
notebooks/: baselines.ipynb  entrega.ipynb  pablo_missing_hours.ipynb  pablo_tests.ipynb  test_visualization.ipynb  tests.ipynb
notebooks/entrega/: baselines.ipynb  model_comparison.ipynb  predictions_with_exog.ipynb  random_forest.ipynb  sarma.ipynb  sarma_v2.ipynb  sarmax.ipynb  visualizations.ipynb
notebooks/tests/: test_visualization.ipynb
scripts/: add_exogenuous.py  build_csv_data.py  preprocess_data.py  resample_data.py  split_data.py
src/: __init__.py  config.py  evaluation.py  forecasters.py  rolling_prediction.py  schema.py  visualization.py
src/data/: __init__.py  load_data.py  preprocessing.py
