[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Pabloo22 <pablete.arino@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.4"
folium = "^0.15.1"
openmeteo-requests = "^1.1.0"
geopy = "^2.4.1"
seaborn = "^0.13.1"
python-dotenv = "^1.0.0"
ipykernel = "^6.28.0"
statsmodels = "^0.14.1"
requests-cache = "^1.1.1"
retry-requests = "^2.0.0"
sktime = "^0.25.0"
statsforecast = "^1.7.1"
iprogress = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79